--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 requests
-PyLaTeX
+pylatex
 python3-nmap
 qrcode
 Flask==2.3.3
 colorama
-Flask_Login
+Flask-Login
 python-nmap
-python-secrets
 playwright>=1.40.0
 flask-socketio>=5.3.0
 python-socketio>=5.9.0
